Spacing fix.

--- a/stylesheets/master.css
+++ b/stylesheets/master.css
@@ -123,7 +123,7 @@ p {
 }
 
 #main > aside div.left, #main > aside div.right {
-	width:49%;
+	width:46%;
 }
 
 #main > aside div ul {
